an update change turned on aot

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -45,7 +45,6 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -124,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "scrounger"
+    }
+  },
+  "defaultProject": "scrounger",
+  "cli": {
+    "analytics": "a4451b5b-5b06-4ccb-b22d-e9048221820e"
+  }
 }
